--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/generator-x"
+    "url": "https://github.com/generator-z"
   },
   "keywords": [
     "yeoman-generator"
